--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,12 +1,12 @@
 import Image from 'next/image'
-import Bleed from 'nextra-theme-docs/bleed'
 
-# Nextra
+# Pumpkin CN
 
-**Nextra** is a [Next.js](https://nextjs.org) based static site generator. 0 lines of code needed.
+**Pumpkin CN** is a ***step by step*** and ***practical*** hands on guide to the Cloud Native ecosystem.
 
-It supports Markdown with React components ([MDX](/mdx)), automatically generated [sidebar and anchor links](/docs/anchors), file-system based routing, built-in syntax highlighting, i18n and more.
+In this guideline, you will learn how to construct a **CI/CD pipeline** that will **containerize** an application and **deploy** it to a **Kubernetes cluster**.
 
-<Bleed>
-  <Image src="/demo.png" width={2288} height={1974} layout="intrinsic" />
-</Bleed>
+By following this guide and practically trying out the available examples, you will be equipped to lead the adoption of cloud-native tooling and fundamenatal principles within a given tech echo system.
+
+### Who is this guideline for?
+This guideline is meant for anybody interested in learning and utilizing Cloud Native fundamenatals or principles during their software development lifecycle.
