Fix grammatical errors

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,12 +1,12 @@
-import Image from 'next/image'
-
 # Pumpkin CN
 
-**Pumpkin CN** is a ***step by step*** and ***practical*** hands on guide to the Cloud Native ecosystem.
+Pumpkin CN is a ***step-by-step*** and ***practical hands-on*** guide to the Cloud Native ecosystem.
 
-In this guideline, you will learn how to construct a **CI/CD pipeline** that will **containerize** an application and **deploy** it to a **Kubernetes cluster**.
+In this guideline, you will learn how to construct a CI/CD pipeline that will containerize an application and deploy it to a Kubernetes cluster.
 
-By following this guide and practically trying out the available examples, you will be equipped to lead the adoption of cloud-native tooling and fundamenatal principles within a given tech echo system.
+By following this guide and practically trying out the available examples, 
+you will be equipped to lead the adoption of cloud-native tooling and fundamental principles within a given tech echo system.
 
 ### Who is this guideline for?
-This guideline is meant for anybody interested in learning and utilizing Cloud Native fundamenatals or principles during their software development lifecycle.
+This guideline is meant for anybody interested in learning and utilizing Cloud-Native fundamentals or 
+principles during their software development lifecycle.
