Fix grammatical errors

--- a/pages/introduction/get-started.mdx
+++ b/pages/introduction/get-started.mdx
@@ -1,14 +1,16 @@
 # Get Started
 
-Throughout this guideline, we will walk through a realistic example, apply good development practices, containerize our application, and finally deploy it to a Kubernetes cluster using an automated CI/CD pipeline.
+Throughout this guideline, we will walk through a realistic example, apply good development practices,
+containerize our application, and finally deploy it to a Kubernetes cluster using an automated CI/CD pipeline.
 
 ### Prerequisites
 
-To comfortably follow through this guideline, one should be comfortable with:
+To comfortably follow through with this guideline, one should be comfortable with:
 
 1. Web application development with [NodeJS](https://nodejs.org/en/) and [ExpressJS](https://expressjs.com/).
 2. Using the CLI or command-line interface.
-3. Using [git](https://git-scm.com/) commands. If you are not familiar with git commands, here is an article that higlights the [10 Git Commands Every Developer Should Know](https://www.freecodecamp.org/news/10-important-git-commands-that-every-developer-should-know/).
+3. Using git commands. If you are not familiar with git commands, here is an article that highlights the 
+[10 Git Commands Every Developer Should Know](https://www.freecodecamp.org/news/10-important-git-commands-that-every-developer-should-know/).
 4. One must have created a [DockerHub](https://hub.docker.com/) account.
 
 **_These prerequisites will be used throughout this guideline. Make sure you have them installed to closely follow the demos._**
@@ -20,4 +22,4 @@ This guideline covers the following concepts:
 - Architecture Considerations
 - Container Orchestration
 - Open Source PaaS
-- Cloud Native CI/CD
+- Cloud-Native CI/CD
