--- a/pages/design-considerations/monoliths-and-microservices.mdx
+++ b/pages/design-considerations/monoliths-and-microservices.mdx
@@ -53,7 +53,7 @@ In a microservice architecture, application tiers are managed independently, as 
 Each unit has the following characteristics:
 
 - managed in a separate repository
-- own independently allocated resources (e.g. CPU and memory)
+- owns independently allocated resources (e.g. CPU and memory)
 - well-defined API (Application Programming Interface) for connection to other units
 - implemented using the programming language of choice for example in our example above the search could be implemented in javascript and the payments service is implemented using python
 - released using its binary
@@ -78,9 +78,9 @@ Each unit has the following characteristics:
 Now, let's refer back to a team developing a flight booking application but using a microservice approach this time round.
 
 In this case, the UI remains the website that the user interacts with. 
-However, the business logic is split into **smaller**, **independent** units, such as authentication, flight search, payments, confirmation, and many more. 
+However, the business logic is split into **smaller**, **independent units**, such as authentication, flight search, payments, confirmation, and many more. 
 These units are stored in separate repositories and are written using the programming language of choice (e.g. JavaScript for the payment service and Python for the authentication service). 
-To interact with other services, each unit exposes an API. And lastly, the data layer contains functions that store and retrieve customer and order data. 
+To interact with other services, each unit exposes an API. Lastly, the data layer contains functions that store and retrieve customer and order data. 
 As expected, each unit is released using its own binary.
 
 
